service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-web
  namespace: gitops-app
spec:
  selector:
    app: nginx-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
